# economics-data-ingestion

./: .env.example  .gitignore  IATA_Economics_Pipeline.pptx  README.md  docker-compose.yml  generate_ppt.py  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
docs/adr/: ADR-001-kafka-as-streaming-transport.md  ADR-002-apache-iceberg-table-format.md  ADR-003-python-over-spark-for-transformation.md  ADR-004-at-least-once-with-deduplication.md  ADR-005-medallion-architecture.md
infra/: main.tf  outputs.tf  variables.tf
infra/environments/: dev.tfvars  int.tfvars  prod.tfvars  uat.tfvars
infra/modules/athena/: main.tf  outputs.tf  variables.tf
infra/modules/glue/: main.tf  variables.tf
infra/modules/iam/: main.tf  outputs.tf  variables.tf
infra/modules/msk/: main.tf  outputs.tf  variables.tf
infra/modules/networking/: main.tf  outputs.tf  (+1 more)
services/consumer_bronze/: Dockerfile  app.py  requirements.txt
services/downloader/: Dockerfile  app.py  requirements.txt
services/producer/: Dockerfile  app.py  requirements.txt
services/scheduler/: Dockerfile  app.py
services/transformer_silver/: Dockerfile  app.py  requirements.txt
tests/: conftest.py  factories.py
tests/e2e/: conftest.py  test_full_pipeline.py
tests/integration/: conftest.py  test_dao_iceberg_read_only.py  test_dao_iceberg_read_write.py  test_producer_consumer.py
tests/unit/: test_config.py  test_dao_iceberg_read_only.py  test_dao_iceberg_read_write.py  test_exceptions.py  test_kafka_consumer.py  test_kafka_producer.py  test_models.py  test_retry.py  test_silver_transform.py
(+4 files in other folders)
